--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- The first thing in any HTML file should be the charset -->
@@ -9,14 +9,14 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <title>React Fundamentals</title>
-  </head>
-  <body>
-    <!-- The app hooks into this div -->
-    <div id="app"></div>
     <!-- Open Sans Font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <!-- The app hooks into this div -->
+    <div id="app"></div>
     <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out the webpack config files in internals/webpack for details) -->
   </body>
 </html>
